--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -17,6 +17,9 @@
   padding: 0;
   font-family: "Cabin" sans-serif;
   box-sizing: content-box;
+  -moz-box-sizing: content-box;
+  -o-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
 
   /* Invalid CSS, but worth it because Mozilla looks a lot better */
   text-rendering: optimizeLegibility;
